# indiflo-autonomy

./: .gitignore  .gitmodules  CONTEXT.md  MAC_AGENT_INSTRUCTIONS.md  PROJECT_DOCUMENTATION.md  SIMULATOR_HANDOFF.md  TODO.md  check_imu_axes.py  cyclonedds.xml
docs/: ARCHITECTURE.md  CAMERA_CAPTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GITHUB_REPO_STRUCTURE.md  HARDWARE_SETUP.md  LAUNCH_FILES.md  NAVIGATION_STACK.md  NETWORK_DDS_SETUP.md  OPERATION.md  REPO_STRUCTURE.md  SIMULATION_SETUP.md  STEREO_VIO_INTEGRATION.md  TROUBLESHOOTING.md  VIO_INTEGRATION.md
scripts/: record_imu_stats.py  setup_jetson_sim_env.sh
src/perception_viz/: CMakeLists.txt  package.xml
src/perception_viz/launch/: sensor_viz.launch.py
src/perception_viz/rviz/: sensor_debug.rviz
src/perception_viz/scripts/: depth_relay.py
src/stereo_depth_ros2/: CMakeLists.txt  package.xml
src/stereo_depth_ros2/cfg/: fake_odom_node_param.yaml  map_param_sim.yaml  stereo_depth_node_param.yaml
src/stereo_depth_ros2/config/openvins/: cam_chain.yaml  estimator_config.yaml  imu_chain.yaml
src/stereo_depth_ros2/config/openvins_sim/: cam_chain.yaml
src/stereo_depth_ros2/include/stereo_depth_ros2/: stereo_depth_node.hpp
src/stereo_depth_ros2/launch/: fake_odom.launch.py  openvins.launch.py  stereo_depth.launch.py  stereo_depth_with_fake_odom.launch.py  stereo_perception.launch.py  stereo_vio_mapping.launch.py  stereo_vio_navigation.launch.py  stereo_vio_navigation_sim.launch.py
src/stereo_depth_ros2/scripts/: vio_watchdog.py
src/stereo_depth_ros2/src/: fake_odom_node.cpp  stereo_depth_node.cpp
src/stereo_test/: CMakeLists.txt  calibrate_offline.cpp  calibrate_stereo.cpp  checkerboard_a4.txt  diag_board_size.cpp  find_board_size.py  fix_camera.sh  stereo_bw_depth.cpp  stereo_metric_depth.cpp  stereo_sgbm_depth.cpp  stereo_sgbm_fast.cpp  stereo_viewer.cpp
src/stereo_test/scripts/: generate_checkerboard.py
